--- a/fe-src/package.json
+++ b/fe-src/package.json
@@ -16,22 +16,22 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "@quasar/extras": "^1.2.0",
+    "@quasar/extras": "^1.3.1",
     "axios": "^0.19.0",
-    "firebase": "^6.4.2",
+    "firebase": "^6.6.0",
     "polyfill-object.fromentries": "^1.0.1",
-    "quasar": "^1.0.5"
+    "quasar": "^1.1.0"
   },
   "devDependencies": {
-    "@quasar/app": "^1.0.4",
-    "@quasar/quasar-app-extension-dotenv": "^1.0.0-beta.10",
+    "@quasar/app": "^1.0.6",
+    "@quasar/quasar-app-extension-dotenv": "^1.0.0-beta.11",
     "@quasar/quasar-app-extension-icon-genie": "^1.0.1",
-    "@vue/eslint-config-airbnb": "^4.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.10.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^5.0.0",
-    "strip-ansi": "=3.0.1"
+    "@vue/eslint-config-airbnb": "^4.0.1",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.3.0",
+    "eslint-loader": "^3.0.0",
+    "eslint-plugin-vue": "^5.2.3",
+    "strip-ansi": "5.2.0"
   },
   "engines": {
     "node": ">= 8.9.0",
