--- a/fe-src/package.json
+++ b/fe-src/package.json
@@ -13,7 +13,8 @@
     "build": "quasar build -m pwa",
     "dev:serveo": "ssh -R all4all:80:localhost:8080 serveo.net",
     "lint": "eslint --ext .js,.vue src",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "test:puppeteer": "node test/index.js"
   },
   "dependencies": {
     "@quasar/extras": "^1.3.1",
@@ -31,6 +32,7 @@
     "eslint": "^6.3.0",
     "eslint-loader": "^3.0.0",
     "eslint-plugin-vue": "^5.2.3",
+    "puppeteer": "^1.19.0",
     "strip-ansi": "5.2.0"
   },
   "engines": {
